[MOD] Tried to fix gap on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  overflow-x: hidden;
+}
+
+:root,
+#__next,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
